[package]
name = "ckb-jsonrpc-interfaces"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
jsonrpc-sdk-prelude = { git = "https://github.com/yangby-cryptape/rust-jsonrpc-sdk", branch = "master" }
jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "9485f1a" }
ckb-core = { git = "https://github.com/nervosnetwork/ckb", rev = "9485f1a" }
ckb-shared = { git = "https://github.com/nervosnetwork/ckb", rev = "9485f1a" }
numext-fixed-hash = "~0.1"
