[package]
name = "ckb-jsonrpc-client"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
ckb-jsonrpc-interfaces = { path = "../interfaces" }
jsonrpc-sdk-client  = "=0.1.4"
jsonrpc-sdk-prelude = "=0.1.4"
property = "~0.1"
failure = "~0.1"
futures = "~0.1"
rkv = "~0.9"
lmdb-rkv = "~0.11"
bincode = "~1.1"
serde = "~1.0"
serde_derive = "~1.0"
url = "~1.7"
