[package]
name = "uckb-jsonrpc-client"
version = "0.1.1-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "[Unofficial] A simple rust JSON-RPC SDK for CKB."
homepage = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk"
repository = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk"
keywords = []
categories = []
license = "Apache-2.0 OR MIT"

[dependencies]
uckb-jsonrpc-core = { version = "0.1.1-alpha.0", path = "../core" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-server-utils = "15.1.0"
thiserror = "1.0.22"
log = "0.4.11"
parking_lot = "0.11.1"
futures = { version = "0.3.8", features = ["compat"] }
tokio = { version = "0.3.3", features = ["full"] }
url = "2.2.0"
