[package]
name = "uckb-jsonrpc-core"
version = "0.3.1-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "[Unofficial] A simple rust JSON-RPC SDK for CKB."
homepage = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk"
repository = "https://github.com/unofficial-ckb/uckb-jsonrpc-sdk"
keywords = []
categories = []
license = "Apache-2.0 OR MIT"

[dependencies]
ckb-types = "0.38.0"
ckb-jsonrpc-types = "0.38.0"
ckb-fee-estimator = "0.38.0"
ckb-hash = "0.38.0"
ckb-crypto = "0.38.0"
jsonrpc-derive = "15.1.0"
jsonrpc-core = "15.1.0"
jsonrpc-core-client = { version = "15.1.0", features = ["http"] }
serde = { version = "1.0.117", features = ["derive"] }
