[package]
name = "uckb-jsonrpc-interfaces"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
jsonrpc-sdk-prelude = "=0.1.4"
ckb-jsonrpc-types   = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.24.0" }
ckb-types           = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.24.0" }
ckb-hash            = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.24.0" }
ckb-crypto          = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.24.0" }
