[package]
name = "uckb-jsonrpc-interfaces"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
jsonrpc-sdk-prelude = "=0.1.4"
ckb-jsonrpc-types   = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-types           = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-hash            = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
ckb-crypto          = { git = "https://github.com/nervosnetwork/ckb", rev = "1f88147" }
